--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,16 @@
-set -ga terminal-overrides ",screen-256color*:Tc"
-set-option -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 set -s escape-time 0
 
-# bind C-a as <leader>
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
-set -g status-style 'bg=#333333 fg=#5eacd3'
+
+bind r source-file ~/.tmux.conf
+set -g base-index 1
+
+set-window-option -g mode-keys vi
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # vim-like pane switching
 bind -r ^ last-window
@@ -15,9 +19,22 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-local sessionizer = "~/.config/tmux/tmux-sessionizer"
-# forget the find window.  That is for chumps
-bind-key -r f run-shell "tmux neww ~/.config/tmux/tmux-sessionizer"
+bind-key -r i run-shell "tmux neww ~./.configs/tmux/tmux-cht.sh"
 
-bind-key -r i run-shell "tmux neww ~/.config/tmux/tmux-cht.sh"
-bind-key -r G run-shell "~/.config/tmux/tmux-sessionizer ~/repos/go-test"
+set -g mouse on
+
+# tpm plugin
+set -g @plugin 'tmux-plugins/tpm'
+
+# list of tmux plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavour 'macchiato' # latte, frappe, macchiato, mocha
+
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
