--- a/tmux.conf
+++ b/tmux.conf
@@ -5,7 +5,7 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 set -g base-index 1
 
 set-window-option -g mode-keys vi
@@ -19,7 +19,7 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-bind-key -r i run-shell "tmux neww ~./.configs/tmux/tmux-cht.sh"
+bind-key -r i run-shell "tmux neww ~/.config/tmux/tmux-cht.sh"
 
 set -g mouse on
 
