--- a/tmux.conf
+++ b/tmux.conf
@@ -28,13 +28,20 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # list of tmux plugins
 # set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+# set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavour 'macchiato' # latte, frappe, macchiato, mocha
 
 # set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Binds for projects
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
+
+bind-key -r J run-shell "~/.local/bin/tmux-sessionizer ~/repos/advent-of-code-2022/frontend/"
+bind-key -r K run-shell "~/.local/bin/tmux-sessionizer ~/repos/advent-of-code-2022/"
+bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/repos/outerHeaven/"
