--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,6 @@ run '~/.tmux/plugins/tpm/tpm'
 # Binds for projects
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
-bind-key -r J run-shell "~/.local/bin/tmux-sessionizer ~/repos/advent-of-code-2022/frontend/"
-bind-key -r K run-shell "~/.local/bin/tmux-sessionizer ~/repos/advent-of-code-2022/"
-bind-key -r L run-shell "~/.local/bin/tmux-sessionizer ~/repos/outerHeaven/"
+bind-key -r J run-shell "~/.config/tmux/bin/tmux-sessionizer.sh ~/repos/advent-of-code-2022/frontend/"
+bind-key -r K run-shell "~/.config/tmux/bin/tmux-sessionizer.sh ~/repos/advent-of-code-2022/"
+bind-key -r L run-shell "~/.config/tmux/bin/tmux-sessionizer.sh ~/repos/outerHeaven/"
